--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
+/C:\Users\madri\UnityProjects\JuegoZipZap\ZipZap\[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
